test and remove todos